# qvcache-vldb2026

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
backends/: bruteforce_backend.h  greator_backend.h
backends/Greator/: CMakeLists.txt
backends/Greator/include/greator/: Neighbor_Tag.h  aligned_file_reader.h  ann_exception.h  aux_utils.h  cached_io.h  concurrent_queue.h  content_buf.h  cosine_similarity.h  ctpl_stl.h  distance.h  exceptions.h  file_content.h  index.h  linux_aligned_file_reader.h  logger.h  logger_impl.h  math_utils.h  memory_mapper.h  neighbor.h  parameters.h  partition_and_pq.h  percentile_stats.h  pq_flash_index.h  pq_table.h  simd_utils.h  threadpool.h  timer.h  utils.h  windows_aligned_file_reader.h
backends/Greator/include/greator/v2/: aux_dist.h  delete_set.h  fs_allocator.h  graph_delta.h  index_merger.h  lock.h  merge_insert.h
backends/Greator/src/: CMakeLists.txt  ann_exception.cpp  aux_utils.cpp  copy_index.cpp  distance.cpp  index.cpp  linux_aligned_file_reader.cpp  logger.cpp  math_utils.cpp  memory_mapper.cpp  partition_and_pq.cpp  pq_flash_index.cpp  sector_len.cpp  utils.cpp  windows_aligned_file_reader.cpp
backends/Greator/src/dll/: dllmain.cpp
backends/Greator/src/v2/: delete_set.cpp  fs_allocator.cpp  graph_delta.cpp  index_merger.cpp  merge_insert.cpp
benchmarks/: CMakeLists.txt
benchmarks/diskann/: build_disk_index.cpp
benchmarks/qvcache/: backend_benchmark.cpp  backend_cache_pressure.cpp  cache_pressure.cpp  qvcache_benchmark.cpp
include/qvcache/: backend_interface.h  delete_consolidate_thread_pool.h  hit_rate_tracker.h  insert_thread_pool.h  lru_cache.h  lru_thread_pool.h  pca_utils.h  qvcache.h  utils.h
python/: CMakeLists.txt  __init__.py  python_backend_wrapper.h  qvcache_python.cpp
python/backends/: __init__.py  bruteforce_backend.py  faiss_backend.py  pgvector_backend.py  pinecone_backend.py  qdrant_backend.py
python/benchmarks/: __init__.py  backend_only_benchmark_faiss_backend.py  backend_only_benchmark_pgvector_backend.py  backend_only_benchmark_pinecone_backend.py  backend_only_benchmark_qdrant_backend.py  qvcache_benchmark_faiss_backend.py  qvcache_benchmark_pgvector_backend.py  qvcache_benchmark_pinecone_backend.py  qvcache_benchmark_qdrant_backend.py  utils.py
python/scripts/: __init__.py
python/scripts/benchmark/: __init__.py  backend_only_benchmark_faiss_backend.sh  backend_only_benchmark_pgvector_backend.sh  backend_only_benchmark_pinecone_backend.sh  backend_only_benchmark_qdrant_backend.sh  qvcache_benchmark_faiss_backend.sh  qvcache_benchmark_pgvector_backend.sh  qvcache_benchmark_pinecone_backend.sh  qvcache_benchmark_qdrant_backend.sh
python/scripts/build_index/: __init__.py  build_faiss_index.py  build_faiss_index.sh  build_pgvector_index.py  build_pgvector_index.sh  build_pinecone_index.py  build_pinecone_index.sh  build_qdrant_index.py  build_qdrant_index.sh
scripts/diskann/: build_disk_index.sh
scripts/qvcache/: backend_benchmark.sh  backend_cache_pressure.sh  cache_pressure.sh  qvcache_benchmark.sh
scripts/workload_generation/: generate_noisy_queries.sh
src/: CMakeLists.txt  delete_consolidate_thread_pool.cpp  insert_thread_pool.cpp
utils/: CMakeLists.txt  compute_groundtruth.cpp  fvecs_to_bin.cpp  generate_noisy_queries.py  ivecs_to_bin.cpp  utils.h
